# menubot

./: .gitignore  main.py  pyproject.toml  run.sh
menubot/: __main__.py  app.py  config.py  dates.py  engine.py  logger.py  requests.py  schemas.py
menubot/bots/: __init__.py  base.py  factory.py  telegram.py  vk.py
menubot/models/: __init__.py  models.py  schemas.py
menubot/repositories/: base.py
menubot/repositories/sql/: __init__.py  admin.py  date.py  menu_image.py  menu_text.py  settings.py  sqlalchemy.py
menubot/services/: __init__.py  settings.py
migrations/: env.py  models.py
migrations/versions/: 3a0891969810_initial.py
